--- a/bojikian-defense.tex
+++ b/bojikian-defense.tex
@@ -66,49 +66,33 @@
 %\usecolortheme{orchid}
 %\usecolortheme{rose}
 %\usecolortheme{seagull}
-%\usecolortheme{seahorse}
+\usecolortheme{seahorse}
 %\usecolortheme{whale}
 %\usecolortheme{wolverine}
 
-%\setbeamertemplate{footline} % To remove the footer line in all slides uncomment this line
-\setbeamertemplate{footline}[page number] % To replace the footer line in all slides with a simple slide count uncomment this line
+\setbeamertemplate{footline} % To remove the footer line in all slides uncomment this line
+%\setbeamertemplate{footline}[page number] % To replace the footer line in all slides with a simple slide count uncomment this line
 
 \setbeamertemplate{navigation symbols}{} % To remove the navigation symbols from the bottom of all slides uncomment this line
 }
 
 \usepackage{graphicx} % Allows including images
-\usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
-%\usepackage {tikz}
-\usepackage{tkz-graph}
-\GraphInit[vstyle = Shade]
-\tikzset{
-  LabelStyle/.style = { rectangle, rounded corners, draw,
-                        minimum width = 2em, fill = yellow!50,
-                        text = red, font = \bfseries },
-  VertexStyle/.append style = { inner sep=5pt,
-                                font = \normalsize\bfseries},
-  EdgeStyle/.append style = {->, bend left} }
-\usetikzlibrary {positioning}
-%\usepackage {xcolor}
-\definecolor {processblue}{cmyk}{0.96,0,0,0}
-%----------------------------------------------------------------------------------------
-%	TITLE PAGE
-%----------------------------------------------------------------------------------------
 
-\title[Short title]{Potential Applications of the GCP data} % The short title appears at the bottom of every slide, the full title is only on the title page
+\title{Fully Polynomial Pareameterized Algrotihms\\For the $T$-Path Packign Problem} % The short title appears at the bottom of every slide, the full title is only on the title page
 
-\author{Peter W Chacha} % Your name
-\institute[The World Bank Group] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
+\author{Narej Bojikian} % Your name
+\institute[Hu-Berlin] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
 {
-The World Bank Group\\ % Your institution for the title page
-\medskip
+	Humboldt University of Berlin
 }
-\date{\today} % Date, can be changed to a custom date
+\date{12.12.2019} % Date, can be changed to a custom date
 
 \begin{document}
 
 \begin{frame}
 \titlepage % Print the title page as the first slide
+\end{frame}
+\begin{frame}{Introduction}
 \end{frame}
 \end{document}
 
