--- a/bojikian-defense.tex
+++ b/bojikian-defense.tex
@@ -156,8 +156,11 @@
 [Do two frames per method one example and one list of params]
 
 [todo: check results]
+
+[todo: add running times?]
 \end{frame}
 \begin{frame}[t]{Methods and results - Preserving properties}
+\vspace{.5cm}
 	\begin{itemize}
 		\item $T$-path packing:
 		\begin{itemize}
@@ -165,14 +168,18 @@
 			\item[--] Tree-width - at most doubles.
 			\item[--] Modular-width - does not change.
 			\item[--] Independence number - does not change.
-			\item[--] Neighborhood diversity number - does not change.
+			\item[--] Neighborhood diversity number\\
+				\hspace{.5cm} - does not change.
+			\item[--] $s$-plexes - does not change.
 			\item[--] Chordal graphs - closed under the reduction.
-			\item[--] Interval- Circular-arc- and co-Comparability- graphs - also closed.
+			\item[--] Interval- Circular-arc- and co-Comparability-\\
+				\hspace{.5cm} graphs - also closed.
 		\end{itemize}
 	\end{itemize}
 \end{frame}
 
 \begin{frame}[t]{Methods and results - Preserving properties}
+\vspace{.5cm}
 	\begin{itemize}
 		\item Odd $T$-path packing:
 			\begin{itemize}
@@ -190,11 +197,13 @@
 
 \begin{frame}{Methods and results - Simplify, solve and augment}
 \end{frame}
-\begin{frame}{Methods and results - Different problem same solution}
-	Do we even have this?
-\end{frame}
-\begin{frame}{Methods and results - Specific algorithm}
-	Or this?
+\begin{frame}[t]{Methods and results - Simplify, solve and augment}
+\vspace{.5cm}
+	\begin{itemize}
+		\item Vertex Cover Number\\ \hspace{.5cm} - simplify to an independent set.
+		\item Feedback Vertex Number\\ \hspace{.5cm} - simplify to a forest.
+	\end{itemize}
+	Designed a dynamic programming algorithm in trees.
 \end{frame}
 \end{document}
 
