--- a/bojikian-defense.tex
+++ b/bojikian-defense.tex
@@ -128,26 +128,36 @@
 
 \begin{frame}[t]{Reduction - $T$-Path Packing to Matching}
 	\begin{minipage}[t][.4\textheight][t]{\linewidth}
-		An instance of the $T$-path packing problem.
+		\centering
+		\includegraphics[width=.5\textwidth]{figures/reductions/graph-orig.eps}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[t][.4\textheight][t]{\linewidth}
-		The corresponding maximum matching instance.
+		\centering
+		\uncover<2->{\includegraphics[width=.5\textwidth]{figures/reductions/graph-first.eps}}
 	\end{minipage}
+	\hrule
+	{\tiny Maximum-minimum S{\"a}tze {\"u}ber Graphen, T.Gallai, 1958}
 \end{frame}
 
-\begin{frame}[t]{Reductions presented in the thesis}
+\begin{frame}{Reductions presented in the thesis}
 	\begin{minipage}[t][.3\textheight][t]{\linewidth}
 		\begin{minipage}[t][\textheight][t]{.45\linewidth}
-
-			$T$-path packing first reduction.
-			
+		\centering
+		\vspace{1cm}
+		\includegraphics[width=.5\textwidth]{figures/reductions/graph-first.eps}
+		
+		\centering $T$-Path Packing Problem
 		\end{minipage}
 		\hfill
 		\vline
 		\hfill
 		\begin{minipage}[t][\textheight][t]{.45\linewidth}
-			$T$-path packing second reduction.
+		\centering
+		\vspace{1cm}
+		\includegraphics[width=.5\textwidth]{figures/reductions/graph-second.eps}
+
+		\centering $T$-Path Packing Problem
 		\end{minipage}
 	\end{minipage}
 		\vfill
@@ -155,12 +165,20 @@
 		\vfill
 	\begin{minipage}[t][.3\textheight][t]{\linewidth}
 		\begin{minipage}[t][\textheight][t]{.45\linewidth}
-			Odd $T$-path packing second reduction.
+		\centering
+		\vspace{1cm}
+		\includegraphics[width=.5\textwidth]{figures/reductions/graph-odd.eps}
+
+		\centering Odd $T$-Path Packing Problem
 		\end{minipage}
 		\hfill
 		\hfill
 		\begin{minipage}[t][\textheight][t]{.45\linewidth}
-			$S-T$-path packing second reduction.
+		\centering
+		\vspace{1cm}
+		\includegraphics[width=.5\textwidth]{figures/reductions/graph-st.eps}
+
+		\centering $S-T$-Path Packing Problem
 		\end{minipage}
 	\end{minipage}
 
