--- a/bojikian-defense.tex
+++ b/bojikian-defense.tex
@@ -262,7 +262,7 @@
 	\uncover<4->{\item The reductions preserve the distance to parameters values.\\}
 		\uncover<5->{Let $\rho_G$ be the value of the parameter in $G$. Consider the class $\mathcal{C}_n := \{G : \rho_G \leq n\}$. For a reduction $f$, such that $f(C_n) \subseteq C_{g(n)}$ for some computeable function $g$,\\
 	\hspace{.5cm} we get \textcolor{blue}{$d_{\mathcal{C}_{g(n)}}(f(G)) \leq 2d_{C_n}(G)$}.}
-	\uncover<6->{\item If maximum matching can be solved efficiently in $G$, it can be solved efficiently in $f(G)$.}
+	\uncover<6->{\item If maximum matching can be solved efficiently in graphs with distance at most $k$ to $\mathcal{C}$, so is $T$-path packing.}
 	\end{itemize}
 \end{frame}
 
